Adding updated opacity model from class 1/19

--- a/opacity_model.ipynb
+++ b/opacity_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false
    },
@@ -11,30 +11,36 @@
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import astropy.units as u\n",
+    "\n",
+    "def SI(l, units):\n",
+    "    SI_I = (l * units).decompose()\n",
+    "    return SI_I.value\n",
     "\n",
     "#Constants:\n",
-    "L = 5000 #angstroms\n",
-    "T_test = 5730.9728 #Kelvin\n",
-    "P_test = 1.2594 \n",
+    "L = SI(5000, u.AA) #angstroms\n",
+    "T_test = 5730.97 #Kelvin\n",
+    "P_test = 1.2594 # = log(P)\n",
     "B = 0.1 #ratio of the #He/#H\n",
     "A = 10**4 #ratio of #H/#metal\n",
-    "sigma_t = 6.655*10**(-25) #centimeter squared, used in thompson scattering \n",
+    "#sigma_t = SI(6.655*10**(-25), u.cm**2)#centimeter squared, used in thompson scattering \n",
+    "sigma_t = 6.655*10**(-25) \n",
     "m_h = 1.6726219*10**(-24) #grams, mass of ionized hydrogen, eg. a proton\n",
-    "c = 29979245800 #speed of light, centimeters per second\n",
+    "c = SI(29979245800, u.cm/u.s) #speed of light, centimeters per second\n",
     "h = 6.62606896*10**(-27) #planck's constnat, erg * seconds\n",
     "k = 1.38065*10**(-16) #boltzmann constant, ergs/Kelvin\n",
     "Chi = 2.195*10**(-11) #ergs, ionization energy of hydrogen\n",
     "x = 10000/L #substitution used in the absorption coefficients \n",
-    "l = L/1000 #micrometers, wavelength of light, just converting L from angstroms to microns to clean up functions.\n",
-    "v = c/(L/10.**8) #frequency associated with L\n",
+    "l = ((L*u.m).to(u.micron)).value #micrometers, wavelength of light, just converting L from angstroms to microns to clean up functions.\n",
+    "v = c/(L) #frequency associated with L\n",
     "\n",
-    "check_ans = np.genfromtxt('opacities.dat', dtype='f8, names = ['temp', 'log_P', 'logH', 'logH-', 'logsigma'])\n",
+    "check_ans = np.genfromtxt('opacities.dat', dtype='f8', names = ['temp', 'log_P', 'logH', 'logH-', 'logsigma'])\n",
     "temp_pelog_dat = np.genfromtxt('temp_pelog.dat', dtype='f8', names = ['temp','log_P' ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false
    },
@@ -43,10 +49,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saha_H_ans =  5.04771580437e-05\n",
-      "Saha_metals_ans =  12.3469380576\n",
-      "X =  5.04746102288e-05\n",
-      "Y =  0.925076448569\n"
+      "Saha_H_ans =  5.04764174695e-05\n",
+      "Saha_metals_ans =  12.3468264756\n",
+      "X =  5.04738697294e-05\n",
+      "Y =  0.925075822194\n"
      ]
     }
    ],
@@ -86,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -95,9 +101,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gaunt_ff_ans =  1.23170234127\n",
-      "Gaunt_bf_ans for m=1 =  -4.865\n",
-      "kappa_atomic =  1.84094111469e-52\n"
+      "Gaunt_ff_ans =  1.12098134668\n",
+      "Gaunt_bf_ans for m=1 =  0.97384\n",
+      "[ 3  4  5  6  7  8  9 10]\n",
+      "3\n",
+      "kappa_atomic =  -1.52028883329\n",
+      "absorp_H =  -25.1507410977\n"
      ]
     }
    ],
@@ -135,7 +144,8 @@
     "\n",
     "#Defining a new array of m's\n",
     "new_m = np.arange(m_0, m_star + 1, 1)\n",
-    "\n",
+    "print new_m\n",
+    "print m_0\n",
     "#Doing the summation over new m's\n",
     "summ = []\n",
     "for i in new_m:\n",
@@ -146,18 +156,18 @@
     "\n",
     "#Atomic hydrogen absorption coefficient per neutral hydrogren: alpha_lambda\n",
     "eqn_part_2 = summ + (1/(2*u(T_test, 1)))*(np.exp(u(T_test, m_star)) - 1 + Gaunt_ff(T_test, l))\n",
-    "eqn_part_1 = (((2.0989*10**(-14))*np.exp(-u(T_test, 1)))/((l**3)*2))*abs(1-np.exp((-h*v)/k*T_test))\n",
+    "eqn_part_1 = (((2.0989*10**(-14))*np.exp(-1.*u(T_test, 1)))/(((l)**3)*2))*(1-np.exp((-h*v)/k*T_test))\n",
     "absorp_H = eqn_part_2 * eqn_part_1\n",
-    "\n",
     "#mass absorption coefficient per gram\n",
-    "multiplier = (1-X(H_ratio))/(1+4*B)*m_h\n",
+    "multiplier = (1-X(H_ratio))/((1+4*B)*m_h)\n",
     "kappa_atomic = absorp_H*multiplier\n",
-    "print 'kappa_atomic = ', kappa_atomic"
+    "print 'kappa_atomic = ', np.log10(kappa_atomic)\n",
+    "print 'absorp_H = ', np.log10(absorp_H)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
@@ -166,22 +176,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "absorp_bf_ans =  3.96287361893e-26\n",
-      "absorp_ff_ans =  2.03563478082e-28\n",
-      "kappa_ion =  4.75864385083e-50\n"
+      "absorp_bf_ans =  5.71804259147e-25\n",
+      "absorp_ff_ans =  2.93746514753e-27\n",
+      "kappa_ion =  -0.610075008972\n"
      ]
     }
    ],
    "source": [
-    "k_star = 0.00680133 + 0.178708*(l) + 0.164790*(l**2) - 0.024842*(l**3) + (l**4)*5.95244*10**(-4)\n",
+    "k_star = 0.00680133 + 0.178708*(5.) + 0.164790*(5.**2) - 0.024842*(5.**3) + (5.**4)*5.95244*10**(-4)\n",
     "\n",
     "#Bound-free absorption coefficient\n",
     "def absorp_bf(P,T):\n",
-    "    absorp_bf_ans = 10**(-26) * P * 0.4158*(Theta(T))**(5./2.) * np.exp(1.726*(Theta(T))) * abs(1-np.exp((-h*v)/k*T)) * k_star\n",
+    "    absorp_bf_ans = (10**(-26)) * 10**P * 0.4158*(Theta(T))**(5./2.) * np.exp(1.726*(Theta(T))) * (1-np.exp((-h*v)/k*T)) * k_star\n",
     "    return absorp_bf_ans\n",
     "#Free-free absorption coefficient\n",
     "def absorp_ff(P,T):\n",
-    "    absorp_ff_ans = 10**(-26) * P * (0.0053666 - 0.011493*(Theta(T)) + 0.027029*(Theta(T))**(2) - (3.2062 - 11.924*(Theta(T)) + 5.939*(Theta(T))**(2))*(l/(10**6)) - (0.40192 - 7.0355*(Theta(T)) + 0.34592*(Theta(T))**(2))*((l**2)/(10**9)))\n",
+    "    absorp_ff_ans = (10**(-26)) * 10**P * (0.0053666 - 0.011493*(Theta(T)) + 0.027029*(Theta(T))**(2) - (3.2062 - 11.924*(Theta(T)) + 5.939*(Theta(T))**(2))*(l/(10**6)) - (0.40192 - 7.0355*(Theta(T)) + 0.34592*(Theta(T))**(2))*((l**2)/(10**9)))\n",
     "    return absorp_ff_ans\n",
     "\n",
     "print 'absorp_bf_ans = ', absorp_bf(P_test, T_test)\n",
@@ -190,12 +200,12 @@
     "\n",
     "absorp_H_neg = absorp_bf(P_test, T_test) + absorp_ff(P_test, T_test)\n",
     "kappa_ion = absorp_H_neg*multiplier\n",
-    "print 'kappa_ion = ', kappa_ion"
+    "print 'kappa_ion = ', np.log10(kappa_ion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 135,
    "metadata": {
     "collapsed": false
    },
@@ -204,10 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cross_section_r where l=5000Ang. =  1.02597504e-27\n",
-      "7.12704e+34\n",
-      "sigma_R(cm) =  85144582044.7\n",
-      "sigma_R(angstroms) =  1.22570121634e-51\n"
+      "sigma_R(angstroms) =  -3.3584109402\n"
      ]
     }
    ],
@@ -216,19 +223,14 @@
     "def cross_section_r(l):\n",
     "    sigma_r_ans = (5.799*10**(-13))/(l**4) + 1.422*10**(-6)/(l**6) + 2.784/(l**8)\n",
     "    return sigma_r_ans\n",
-    "print 'cross_section_r where l=5000Ang. = ', cross_section_r(5000)\n",
     "\n",
-    "wave_test = L*10**(-8) #Angstroms to centimeters\n",
-    "print cross_section_r(wave_test)\n",
-    "sigma_R_cm = cross_section_r(wave_test)*multiplier\n",
     "sigma_R_ang = cross_section_r(5000)*multiplier\n",
-    "print 'sigma_R(cm) = ', sigma_R_cm\n",
-    "print 'sigma_R(angstroms) = ', sigma_R_ang"
+    "print 'sigma_R(angstroms) = ', np.log10(sigma_R_ang)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 136,
    "metadata": {
     "collapsed": false
    },
@@ -237,17 +239,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sigma_T =  4.06353858316e-05\n",
-      "sigma_total =  4.06353858316e-05\n"
+      "sigma_T =  -4.39109805174\n",
+      "sigma_total =  -3.31989021244\n"
      ]
     }
    ],
    "source": [
     "#Calculating Thompson scattering\n",
-    "sigma_T = sigma_t * (X(H_ratio) + Y(m_ratio)/A)/((1.+4.*B)*m_h)\n",
-    "print 'sigma_T = ', sigma_T\n",
+    "sigma_T = sigma_t * ((X(H_ratio) + Y(m_ratio)/A)/((1.+4.*B)*m_h))\n",
+    "print 'sigma_T = ', np.log10(sigma_T)\n",
     "\n",
-    "sigma_total = sigma_R_ang + sigma_T\n",
+    "sigma_total = np.log10(sigma_R_ang + sigma_T)\n",
     "print 'sigma_total = ', sigma_total"
    ]
   },
